<?xml version="1.0" encoding="utf-8"?><!--
  - Copyright 2013 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>

    <string name="app_name">GCM Client</string>
    <string name="sender_id">Project No</string>
    <string name="server_url">Server URL</string>
    <string name="push_act">Activity</string>
    <string name="notification_act">Action</string>
    <string name="push_on">Enable to launch the activity from a puch notification</string>
    <string name="push_notification">Notify when a push notification received</string>
    <string name="full_wake">Turn the screen on when a push notification received</string>
    <string name="end_off">Turn the screen off after the activity ended</string>
    <string name="set">Set</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="stored">Parameters set</string>
    <string name="registered">Device registered</string>
    <string name="sent">Registration ID sent</string>
    <string name="no_sender_id">Project No is empty</string>
    <string name="no_activity">Activity or package does not exist</string>
    <string name="error">Error</string>
    <string name="send_error">Send error</string>
    <string name="deleted">Deleted messages on server</string>
    <string name="received">Push received: %1$s &lt;%2$s&gt;</string>
    <string name="notification">GCM Notification</string>

</resources>
