<?xml version="1.0" encoding="utf-8"?><!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>
                <TextView android:text="@string/sender_id" />
                <EditText
                    android:id="@+id/senderid"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:inputType="number" />_
            </TableRow>

            <TableRow>
                <TextView android:text="@string/server_url" />
                <EditText
                    android:id="@+id/serverurl"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:inputType="textUri"
                    android:hint="yourserver.com/reg.php"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <TextView android:text="@string/push_act" />
                <EditText
                    android:id="@+id/pushact"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <TextView android:text="@string/notification_act" />
                <EditText
                    android:id="@+id/notifact"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </TableRow>

            <CheckBox android:id="@+id/pushon"
                android:text="@string/push_on" />

            <CheckBox android:id="@+id/callnotif"
                android:text="@string/call_notification" />

            <CheckBox android:id="@+id/fullwake"
                android:text="@string/full_wake" />

            <CheckBox android:id="@+id/endoff"
                android:text="@string/end_off" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/set" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/register" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/send" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/clear" />

        </LinearLayout>

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/regid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
